--- a/frontend/account/jade/federationDialog.jade
+++ b/frontend/account/jade/federationDialog.jade
@@ -53,7 +53,7 @@ md-dialog#federationDialog(aria-label="Federation", flex-lg="80", flex-gt-lg="50
 								md-button.md-icon-button(aria-label="Remove", ng-click="vm.removeFromFederation($index)")
 									md-icon.angular-material-icons.md-accent remove_circle
 							div(ng-if="vm.showRemoveWarning")
-								p#federationWarning This project cannot be removed. Please delete Federation.
+								p#federationWarning This project cannot be removed. Please delete federation.
 
 			md-divider
 
