ISSUE #235 - For federations, display greyed out text and (different) icon for nodes of projects deleted

--- a/frontend/tree/css/tree.css
+++ b/frontend/tree/css/tree.css
@@ -48,6 +48,17 @@ tree .expandButton {
   margin-left: 0 !important;
 }
 
+tree .noAccessButton {
+  margin-left: 0 !important;
+  opacity: 0.5;
+}
+tree .noAccessName {
+  opacity: 0.5;
+}
+tree .noAccessName:hover {
+  cursor: default !important;
+}
+
 tree .toggleButton {
   margin-right: 0 !important;
 }
