ISSUE #232 - Fixed bug with user projects not appearing, Cancel in dialog always enabled

--- a/frontend/account/css/account.css
+++ b/frontend/account/css/account.css
@@ -495,3 +495,7 @@ account-federations .federationTimestamp {
   color: rgba(0,0,0,.3);
   margin-left: 20px;
 }
+
+account-federations #accountFederationInfo {
+  padding: 20px 20px 0 20px;
+}
