--- a/frontend/account/jade/accountFederations.jade
+++ b/frontend/account/jade/accountFederations.jade
@@ -1,6 +1,6 @@
 .userContent
 
-	div(ng-if="vm.showInfo")
+	#accountFederationInfo(ng-if="vm.showInfo")
 		.cardInfo
 			p You do not currently have any federations set up
 
