--- a/frontend/account/jade/accountProjects.jade
+++ b/frontend/account/jade/accountProjects.jade
@@ -13,7 +13,7 @@
 						md-button.md-icon-button(aria-label="Folder")
 							md-icon.angular-material-icons {{account.showProjectsIcon}}
 						p {{account.account}}
-				spen(flex)
+				span(flex)
 				.accountRight
 					md-button.md-icon-button(aria-label="New project", ng-click="vm.newProject($event)")
 						md-icon.angular-material-icons.md-accent playlist_add
