--- a/frontend/account/jade/accountFederations.jade
+++ b/frontend/account/jade/accountFederations.jade
@@ -25,7 +25,7 @@
 								p {{federation.project}}
 						//md-button.md-icon-button.md-accent(aria-label="Edit", ng-click="vm.editFederation($event, $index)")
 							md-icon.angular-material-icons edit
-						div(layout="row")
+						#federationInfoRight(layout="row")
 							p.federationTimestamp {{federation.timestamp | prettyDate:true}}
 							md-menu(md-position-mode="target-right target", ng-if="accountIndex===0")
 								md-button.md-icon-button.md-accent(aria-label="More", ng-click="$mdOpenMenu($event)")
