ISSUE #250 - Added type radio group to add issues

--- a/frontend/issues/css/issues.css
+++ b/frontend/issues/css/issues.css
@@ -66,6 +66,14 @@ issues #addAlert #addAlertBackground #addAlertInfo .md-button {
   background: #EEEEEE;
 }
 
+issues #issuesAddType {
+  margin: 0 5px 20px;
+}
+
+issues #issuesAddTypeDivider {
+  margin-bottom: 40px;
+}
+
 /** Issue *************************************************************************************************************/
 issue {
   display: block;
