--- a/frontend/issues/jade/issues.jade
+++ b/frontend/issues/jade/issues.jade
@@ -42,7 +42,7 @@ div(ng-switch="vm.toShow")
 		#issuesAddType
 			p Type
 			md-radio-group(ng-model="vm.type", layout="row", layout-align="space-between")
-				md-radio-button.md-primary(ng-repeat="issueType in vm.issueTypes", value="{{issueType.value}}")
+				md-radio-button.md-accent(ng-repeat="issueType in vm.issueTypes", value="{{issueType.value}}")
 					md-icon.angular-material-icons {{issueType.icon}}
 		md-divider#issuesAddTypeDivider
 		// Title
@@ -54,15 +54,31 @@ div(ng-switch="vm.toShow")
 			label Comment
 			textarea(ng-model="vm.comment")
 		// Save
-		div(layout="row", layout-align="start center")
+		#issuesAddSave(layout="row", layout-align="start center")
 			md-button.md-raised.md-accent(ng-click="vm.saveIssue()", ng-disabled="vm.saveIssueDisabled") Save
 			md-progress-circular(md-diameter="20px", ng-if="vm.savingIssue")
-			md-button.md-primary(ng-click="vm.cancelAddIssue()") Cancel
+			md-button.md-accent(ng-click="vm.cancelAddIssue()") Cancel
 		// Scribble extra
-		div(ng-if="vm.type==='scribble'")
+		.issuesAddExtra(ng-if="vm.type==='scribble'")
 			md-divider
-			md-checkbox(ng-model="vm.toggleErase" aria-label="Toggle erase")
-				md-icon(class="fa fa-eraser")
+			div(layout="row", layout-align="start start")
+				md-icon.angular-material-icons info_outline
+				p Draw (and erase) lines over the model.
+			md-checkbox.issuesAddExtraErase(ng-model="vm.toggleErase" aria-label="Toggle erase") Erase
+				//md-icon(class="fa fa-eraser")
+		// Pin extra
+		.issuesAddExtra(ng-if="vm.type==='pin'")
+			md-divider.
+			div(layout="row", layout-align="start start")
+				md-icon.angular-material-icons info_outline
+				p Click anywhere on an object to position the pin.
+		// Multi extra
+		.issuesAddExtra(ng-if="vm.type==='multi'")
+			md-divider
+			div(layout="row", layout-align="start start")
+				md-icon.angular-material-icons info_outline
+				p Click on objects to add or remove.
+
 
 	// Info
 	.cardInfo(ng-switch-when="showInfo")
