ISSUE #232 - Show user account in project list even if no projects

--- a/frontend/account/jade/accountProjects.jade
+++ b/frontend/account/jade/accountProjects.jade
@@ -5,8 +5,7 @@
 
 	md-list#accountList(flex, ng-if="vm.projectsExist")
 		// Accounts
-		// Don't show account if it doesn't have any projects - possible when user is a team member of a federation but not a member of a project in that federation!
-		div(ng-repeat="account in vm.accounts", flex, ng-if="account.projects.length!==0")
+		div(ng-repeat="account in vm.accounts", flex, ng-if="account.showAccount")
 			div(layout="row", layout-align="start center")
 				md-list-item(flex="100", layout-fill)
 					.account(ng-click="vm.toggleProjectsList($index)", layout="row", layout-align="start center", md-ink-ripple, layout-fill)
