ISSUE #245 - Fixed bug showing same upload file name for two projects

--- a/frontend/account/jade/accountProject.jade
+++ b/frontend/account/jade/accountProject.jade
@@ -13,7 +13,7 @@ div(layout="row", layout-align="start center", flex)
 
 	.projectRight(layout="row", layout-align="start center")
 		.projectUploadInfo(ng-if="vm.project.uploading", layout="row", layout-align="start center")
-			p.projectUploadFilename {{vm.uploadedFile.file.name}}
+			p.projectUploadFilename {{vm.uploadFileName}}
 			p.projectUploadInfo(ng-if="vm.showFileUploadInfo") {{vm.fileUploadInfo}}
 			md-progress-circular.projectUploadIcon(md-mode="indeterminate", md-diameter="15", ng-if="vm.showUploading")
 
