--- a/frontend/panel/jade/panel.jade
+++ b/frontend/panel/jade/panel.jade
@@ -2,15 +2,16 @@ div(ng-show="vm.showPanel")
 	div#items(ng-class="{ active : vm.activate }")
 		div(ng-repeat="contentItem in vm.contentItems")
 			panel-card(
-				account="vm.account"
-				project="vm.project"
-				branch="vm.branch"
-				revision="vm.revision"
-				position="vm.position"
-				content-data='contentItem'
-				ng-show='contentItem.show',
-				on-height-request="vm.heightRequest(contentItem, height)"
-			)
+			account="vm.account"
+			project="vm.project"
+			branch="vm.branch"
+			revision="vm.revision"
+			position="vm.position"
+			content-data='contentItem'
+			ng-show='contentItem.show',
+			on-height-request="vm.heightRequest(contentItem, height)"
+			keys-down="vm.keysDown")
+
 			div(ng-if="contentItem.showGap", style="display:block; height:20px;")
 	div#buttons(ng-class="{ active : vm.activate }", ng-if="vm.position==='left'")
 		.panelButtonGroup(ng-repeat="contentItem in vm.contentItems", layout="column", layout-align="start center")
