--- a/frontend/issues/jade/issuesListItem.jade
+++ b/frontend/issues/jade/issuesListItem.jade
@@ -1,7 +1,18 @@
-div(layout="column", layout-fill, ng-click="$ctrl.toggleEnter()")
-	p {{$ctrl.data.title}}
-	span(flex)
+div(layout="column", layout-fill, ng-click="$ctrl.toggleSelected()")
+	#issuesListItemContent(layout='row', flex)
+		#issueListItemThumbnail(flex="33", layout="column", layout-align="center center")
+			img(ng-src="{{$ctrl.thumbnail}}")
+		div(flex, layout="column")
+			label#issuesListItemTitle(flex="none") {{$ctrl.data.title}}
+			#issuesListItemInfo(layout="row", layout-align="start center", flex="none")
+				div(flex="15")
+					#issuesListItemStatus
+				label(flex) {{$ctrl.data.owner}}
+				div(layout="row", layout-align="end", flex="30")
+					label {{$ctrl.data.timeStamp}}
+			#issuesListItemDescription
+				label Description which is soooooo very very very very very very very very very very very very very very very very very very very very very very very
 	md-divider
 
-	#issuesListItemEnter(ng-if="$ctrl.showEnter", layout="column", layout-align="center center")
+	#issuesListItemEnter(ng-if="$ctrl.selected", ng-click="$ctrl.editIssue()", layout="column", layout-align="center center")
 		md-icon.angular-material-icons arrow_forward
