--- a/frontend/account/jade/deleteDialog.jade
+++ b/frontend/account/jade/deleteDialog.jade
@@ -1,7 +1,7 @@
 md-dialog.deleteDialog(aria-label="Delete")
 	md-toolbar
 		.md-toolbar-tools
-			h2 {{vm.deleteTitle}}
+			h2 {{vm.title}}
 			span(flex)
 			md-button.md-icon-button(ng-click="vm.closeDialog()")
 				md-icon.angular-material-icons(aria-label="Close dialog") close
