--- a/frontend/issues/css/issues.css
+++ b/frontend/issues/css/issues.css
@@ -27,10 +27,6 @@ issues .issueHeader:hover {
   cursor: pointer;
 }
 
-issues textarea {
-  min-height: 70px !important;
-}
-
 issues md-list {
   padding: 0;
 }
@@ -64,6 +60,17 @@ issues #addAlert #addAlertBackground #addAlertInfo {
 }
 issues #addAlert #addAlertBackground #addAlertInfo .md-button {
   background: #EEEEEE;
+}
+
+issues #issuesAddButton {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+issues #issuesContent {
+  height: 100%;
+  overflow: auto;
 }
 
 /** Issue *************************************************************************************************************/
@@ -308,4 +315,25 @@ issues-list-item #issuesListItemEnter {
 }
 issues-list-item #issuesListItemEnter md-icon {
   color: #FFFFFF;
+}
+
+/** Issue Comp ********************************************************************************************************/
+issue-comp div:first-child {
+  outline: none;
+}
+
+issue-comp .issueCompItemContainer {
+  padding: 10px;
+}
+
+issue-comp #issueCompStatus {
+  margin: 25px 10px 0 0;
+}
+
+issue-comp textarea {
+  min-height: 70px !important;
+}
+
+issue-comp .issueComItemStatus {
+  margin-right: 5px;
 }
