--- a/frontend/issues/jade/issueScreenShotDialog.jade
+++ b/frontend/issues/jade/issueScreenShotDialog.jade
@@ -1,10 +1,2 @@
-div(layout-fill, layout="column", layout-align="center")
-	div(layout="row", layout-align="center", flex="80")
-		md-dialog(aria-label="Screen Shot", flex="85")
-			md-toolbar
-				.md-toolbar-tools
-					h2 {{vm.title}}
-					span(flex)
-					md-button.md-icon-button(ng-click="vm.closeDialog()")
-						md-icon.angular-material-icons(aria-label="Close dialog") close
-			md-content(layout-margin)
+md-dialog#issueScreenShotDialog(aria-label="Screen Shot")
+	issues-screen-shot(send-event="vm.dialogCaller.sendEvent({type: type, value: value})", close="vm.closeScreenShot()")
