--- a/frontend/issues/jade/issues.jade
+++ b/frontend/issues/jade/issues.jade
@@ -39,7 +39,8 @@ tdr-progress(ng-if="vm.showProgress", info="vm.progressInfo")
 	ng-switch-when="showIssue"
 	data="vm.issueToEdit"
 	keys-down="vm.keysDown"
-	exit="vm.editIssueExit(issue)")
+	exit="vm.editIssueExit(issue)"
+	send-event="vm.sendEvent(type, value)")
 	//issue(
 		ng-switch-when="showIssue"
 		index="vm.selectedIndex"
