--- a/frontend/issues/css/issues.css
+++ b/frontend/issues/css/issues.css
@@ -356,6 +356,19 @@ issues-screen-shot #issueScreenShotActions {
   margin: auto;
 }
 
-issues-screen-shot #issueScreenShotEraseIcon {
+issues-screen-shot #issueScreenShotFAIcon {
   font-size: 24px;
+}
+
+issues-screen-shot #issueScreenShotContent {
+  overflow: hidden;
+}
+
+issues-screen-shot #issueScreenShotCanvas {
+  position: absolute;
+  top: 0;
+}
+
+issues-screen-shot #issueScreenShotImage {
+  width: 100%;
 }
